...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <attributedString key="attributedText">
                                    <fragment content="Your moods over the last 10 days">
                                        <attributes>
                                            <color key="NSColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <attributedString key="attributedText">
                                    <fragment content="Average Mood">
                                        <attributes>
                                            <font key="NSFont" size="17" name="AvenirNext-UltraLight"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <attributedString key="attributedText">
                                    <fragment content="You have recorded the following moods....">
                                        <attributes>
                                            <font key="NSFont" size="18" name="AvenirNext-UltraLight"/>
...
                    </view>
                    <navigationItem key="navigationItem" id="Tg4-Xm-yfd">
                        <barButtonItem key="rightBarButtonItem" title="History" id="VAy-Aa-PEK">
                            <color key="tintColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" largeTitles="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EcX-9C-vjI" userLabel="Journal">
                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <attributedString key="attributedText">
                                    <fragment content="How do you feel?">
                                        <attributes>
                                            <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <attributedString key="attributedText">
                                    <fragment content="Why do you feel like this?">
                                        <attributes>
                                            <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Work">
                                            <attributes>
                                                <color key="NSColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
...
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Family">
                                            <attributes>
                                                <color key="NSColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
...
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Partner">
                                            <attributes>
                                                <color key="NSColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
...
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Health">
                                            <attributes>
                                                <color key="NSColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
...
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Home">
                                            <attributes>
                                                <color key="NSColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
...
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Finances">
                                            <attributes>
                                                <color key="NSColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
...
                                <rect key="frame" x="258" y="420" width="40" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Other">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Other">
...
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="I'd rather not say">
                                            <attributes>
                                                <color key="NSColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
...
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Weather">
                                            <attributes>
                                                <color key="NSColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
...
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Sense" image="HeartEmpty" id="cPa-gy-q4n">
                        <color key="badgeColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
                    </tabBarItem>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CIC-7H-Ci7" customClass="BarChartView" customModule="Charts">
                                <rect key="frame" x="10" y="348" width="349" height="262"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                        <viewLayoutGuide key="safeArea" id="GuX-UV-T5A"/>
                    </view>
                    <navigationItem key="navigationItem" title="Moomoo" id="H0J-4u-Mg2">
                        <barButtonItem key="leftBarButtonItem" title="Back" id="Z5R-QF-eic">
